[package]
name = "mac_address"
version = "0.2.0"
authors = ["rep-nop <repnop@outlook.com>"]
build = "build.rs"
description = "Cross-platform retrieval of a network interface MAC address."
repository = "https://github.com/rep-nop/mac_address"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["mac", "address", "network", "interface"]

[dependencies]

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
nix = "0.10.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["winerror", "ws2def"] }